; ModuleID = '/home/carl/AnghaBench/git/extr_diff.c_diff_queue_is_empty.c'
source_filename = "/home/carl/AnghaBench/git/extr_diff.c_diff_queue_is_empty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.diff_queue_struct = type { i32, i32* }

@diff_queued_diff = common dso_local global %struct.diff_queue_struct zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @diff_queue_is_empty() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.diff_queue_struct*, align 8
  %3 = alloca i32, align 4
  store %struct.diff_queue_struct* @diff_queued_diff, %struct.diff_queue_struct** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %22, %0
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.diff_queue_struct*, %struct.diff_queue_struct** %2, align 8
  %7 = getelementptr inbounds %struct.diff_queue_struct, %struct.diff_queue_struct* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp slt i32 %5, %8
  br i1 %9, label %10, label %25

10:                                               ; preds = %4
  %11 = load %struct.diff_queue_struct*, %struct.diff_queue_struct** %2, align 8
  %12 = getelementptr inbounds %struct.diff_queue_struct, %struct.diff_queue_struct* %11, i32 0, i32 1
  %13 = load i32*, i32** %12, align 8
  %14 = load i32, i32* %3, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @diff_unmodified_pair(i32 %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %21, label %20

20:                                               ; preds = %10
  store i32 0, i32* %1, align 4
  br label %26

21:                                               ; preds = %10
  br label %22

22:                                               ; preds = %21
  %23 = load i32, i32* %3, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %3, align 4
  br label %4

25:                                               ; preds = %4
  store i32 1, i32* %1, align 4
  br label %26

26:                                               ; preds = %25, %20
  %27 = load i32, i32* %1, align 4
  ret i32 %27
}

declare dso_local i32 @diff_unmodified_pair(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
